# Guide-to-Containers-with-Docker

./: Dockerfile  README.md
.github/workflows/: docker-image.yml  main.yml
00 Docker basic commands/: Basic Comands.MD
01 flask demo/: README.md  app.py
02 node demo/: Dockerfile  Readme.MD  index.js  package-lock.json  package.json
03 Docker compose/: Readme.md
03 Docker compose/myproject/: Dockerfile  docker-compose.yml  requirements.txt
03 Docker compose/myproject/myproject/: settings.py
04 Docker Registry/: Readme.md  dockerfile  index.js  package-lock.json  package.json  server.js
05flask_library_api/: .env  Dockerfile  pyproject.toml
05flask_library_api/05flask_library_api/: crud.py  database.py  main.py  models.py  schemas.py
05flask_library_api/alembic/versions/: 001_create_books_table.py
06NodeCI/: app.js  dockerfile  package.json
